Reimplement page in React

--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="If www.creedthoughts.gov.www\creedthoughts actually made it onto the internet."
+    />
+    <link rel="apple-touch-icon"  href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Alex Brown</title>
-
-    <script defer src="/__/firebase/8.1.1/firebase-app.js"></script>
-    <script defer src="/__/firebase/8.1.1/firebase-analytics.js"></script>
-    <script defer src="/__/firebase/init.js"></script>
-
-    <style media="screen">
-      body { background: #ECEFF1; color: rgba(0,0,0,0.87); font-family: Roboto, Helvetica, Arial, sans-serif; margin: 10px 10px 10px 10px; padding: 0; height: 95vh;}
-    </style>
   </head>
   <body>
-    <h1>Hi!</h1>
-    <p>I did a thing.</p>
-    <p>Enjoy this nice, refreshing picture while I work on adding stuff.</p>
-    <img src="/assets/images/marcy.jpg" height="80%">
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
   </body>
 </html>
